--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.3.1",
+    "react-awesome-slider": "^4.1.0",
     "react-dom": "^18.3.1",
+    "react-fast-marquee": "^1.6.4",
     "react-router-dom": "^6.24.0",
     "sort-by": "^1.2.0"
   },
