--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
     "react-awesome-slider": "^4.1.0",
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.4",
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.24.0",
-    "sort-by": "^1.2.0"
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
+    "sort-by": "^1.2.0",
+    "sweetalert2": "^11.12.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
